Remove unused methods

--- a/EduTube/EduTube.GUI/Views/Videos/Edit.cshtml
+++ b/EduTube/EduTube.GUI/Views/Videos/Edit.cshtml
@@ -31,6 +31,7 @@
                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                   <div class="form-group">
                      <label class="control-label">Tags</label>
+                     <i class="fa fa-info-circle margin-left-2rem" title="You can selecte some existing tags, or create new tag just by typing them"></i>
                      <input id="tagsInput" asp-for="Tags" type="text" class="form-control">
                   </div>
                </div>
@@ -116,7 +117,7 @@
                </div>
                <!-- Modal body -->
                <div class="modal-body">
-                  <h5 class="text-center">We are uploading video, please don't leave this page</h5>
+                  <h5 class="text-center">We are updating video, please don't leave this page</h5>
                   <div class="d-flex justify-content-center">
                      <div class="loader">Loading...</div>
                   </div>
