--- a/EduTube/EduTube.GUI/Views/Videos/Create.cshtml
+++ b/EduTube/EduTube.GUI/Views/Videos/Create.cshtml
@@ -45,6 +45,7 @@
                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                   <div class="form-group">
                      <label class="control-label">Tags</label>
+                     <i class="fa fa-info-circle margin-left-2rem" title="You can selecte some existing tags, or create new tag just by typing them"></i>
                      <input id="tagsInput" asp-for="Tags" type="text" class="form-control">
                   </div>
                </div>
@@ -53,7 +54,7 @@
                <div class="col-12">
                   <div class="form-group" style="margin-top:2rem;">
                      <label asp-for="Description" class="control-label"></label>
-                     <input asp-for="Description" class="form-control" />
+                     <textarea asp-for="Description" class="form-control" style="height:12rem;"></textarea>
                      <span asp-validation-for="Description" class="text-danger"></span>
                   </div>
                </div>
